--- a/plugin/manifest.json
+++ b/plugin/manifest.json
@@ -6,7 +6,7 @@
     "js": ["js/desktop.js"],
     "css": ["css/desktop.css"]
   },
-  "icon": "image/icon.png",
+  "icon": "image/メールボックスアイコン2.png",
   "config": {
     "html": "html/config.html",
     "js": ["js/config.js"],
